<resources>
  <string name="app_name">StintMint</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_maps">Map</string>
  <string name="title_activity_sign_up">Sign Up</string>
  <string name="username_hint">User Name</string>
  <string name="password_hint">Password</string>
  <string name="email_hint">email@server.com</string>
  <string name="sign_up_btn_lbl">Sign Up</string>
  <string name="title_activity_login">Login Activity</string>
  <string name="error_title">Oops!</string>
  <string name="username_cannot_be_empty">Username cannot be empty</string>
  <string name="password_cannot_be_empty">Password cannot be empty</string>
  <string name="email_cannot_be_empty">EMail cannot be empty</string>
  <string name="action_logout">Logout</string>
  <string name="sign_up">Sign Up</string>
  <string name="sign_in">Sign In</string>
  <string name="title_activity_stint">StintActivity</string>
  <string name="accepted_stint">Accepted</string>
  <string name="approved_stint">Approved</string>
  <string name="completed_stint">Completed</string>
  <string name="offerred_stint">Offered</string>
  <string name="stints">Stints</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
