<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.stintmint.ui.SignUpActivity">

  <EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:hint="@string/username_hint"/>

  <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/username"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:hint="@string/password_hint"
    android:inputType="textPassword"/>

  <EditText
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password"
    android:layout_centerHorizontal="true"
    android:ems="10"
    android:hint="@string/email_hint"
    android:inputType="textEmailAddress"/>

  <LinearLayout
    style="?android:buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:orientation="horizontal">
  <Button
    android:id="@+id/button_login_sign_up"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/sign_up_btn_lbl"/>
  </LinearLayout>
</RelativeLayout>
